fixing overflow in global

--- a/src/components/global.css
+++ b/src/components/global.css
@@ -43,7 +43,7 @@ body {
 
 }
 
-#___gatsby {
+body >  div {
   overflow-x: hidden;
 }
 
